# Cart-IQ

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  lint.yaml
notebooks/: 01_EDA.ipynb  02_Feature_engineering.ipynb
src/data/: clean_data.py  load_data.py
src/features/: behaviors.py  featurization.py  rfm.py  time.py
tests/: test_dummy.py
