[project]
name = "cartiq"
version = "0.1.0"
description = "E-commerce Intelligence System"
authors = [
    { name = "Rachit" }
]
dependencies = [
    "pandas",
    "scikit-learn",
    "fastapi",
    "streamlit",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
exclude = [".pycache__", "venv"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
